<resources>
    <string name="app_name">Veloxopus</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profiles">ProfilesActivity</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="welcome_to_veloxopus">Welcome to Veloxopus!</string>
    <string name="login_to_connect_with_jobs_or_workers_fast">Login to connect with jobs or workers, fast.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="category">Category</string>
    <string name="profile_type">Profile Type</string>
    <string name="my_profiles">My Profiles</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="my_matches">My Matches</string>

    <string-array name="categories">
        <item>Housework</item>
        <item>Yard Work</item>
        <item>Tutoring</item>
        <item>Child/Pet Care</item>
        <item>Construction</item>
        <item>Art/Design</item>
        <item>Tech</item>
        <item>Other</item>
    </string-array>
    <string-array name="types">
        <item>Worker</item>
        <item>Job</item>
    </string-array>
    <string name="title_activity_card">CardActivity</string>
    <string name="add_worker_or_job_profiles_to_match_with_others">Add worker or job profiles to match with others.</string>
    <string name="profile"><![CDATA[<profile>]]></string>
    <string name="registration">Registration</string>
    <string name="what_s_your_first_name">What\'s your first name?</string>
    <string name="register">Register</string>
    <string name="are_you_sure_you_want_to_delete_this_profile">Are you sure you want to delete this profile?</string>
    <string name="no_profiles_to_match">No available profiles to match</string>
    <string name="try_again">Try again later!</string>
</resources>
