<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sabishop.veloxopus.RegistrationActivity"
    android:background="@color/colorDarkGreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="16pt"
            android:text="@string/registration"
            android:gravity="center_horizontal"
            android:layout_margin="15pt"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="@color/colorWhite"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@color/colorWhite"
                android:singleLine="true"
                android:layout_gravity="center_horizontal"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLightPurple"
            android:gravity="center_horizontal"
            android:text="@string/what_s_your_first_name"
            android:textSize="12pt"
            android:layout_margin="15pt"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editTextName"
            android:background="@color/colorWhite"
            android:layout_margin="7pt"/>

        <Button
            android:text="Create Account"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="@android:color/holo_blue_bright"
            android:layout_width="300dp"
            android:layout_margin="15pt" />
    </LinearLayout>
</RelativeLayout>
